fix (HSK-456) fix missing margin of headline on thank you page

--- a/source/_patterns/01-molecules/10-checkout/09-checkout-order-confirmation.scss
+++ b/source/_patterns/01-molecules/10-checkout/09-checkout-order-confirmation.scss
@@ -1,4 +1,4 @@
 .os-step__title {
-  margin: 2em 0 1.25em;
+  margin: 2em 0 1.25em!important;
   @include font-primary-medium-uppercase(1.3125em);
 }
